correct footer link spacing

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -18,6 +18,7 @@ footer {
 		display: flex;
 		justify-content: space-between;
 		padding: 1rem;
+		height: auto;
 	}
 
 	li {
@@ -42,10 +43,13 @@ footer {
 
 	a {
 		width: 100%;
-		height: 100%;
+		max-height: 4rem;
 		padding: 0;
 		margin: 0;
 		text-align: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
 		&:hover {
 			path {
